--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "jshint": "^2.9.4",
     "karma": "^1.3.0",
     "karma-chai-plugins": "^0.8.0",
     "karma-chrome-launcher": "^2.0.0",
