--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-exec": "^2.1.3",
+    "gulp-nodemon": "^2.2.1",
     "jshint": "^2.9.4",
     "karma": "^1.3.0",
     "karma-chai-plugins": "^0.8.0",
