--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "REK",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
